...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/questionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/str_question"
...
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionTextView">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/questionImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="8dp"
...
                        android:layout_marginBottom="8dp"
                        android:visibility="@{areElementsVisible == true ? View.VISIBLE : View.GONE}"
                        app:cardElevation="4dp"
                        app:strokeWidth="0dp">

                        <RadioButton
                            android:id="@+id/radioButtonAnswer1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxWidth="@dimen/radio_button_max_width"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:buttonTint="@color/radio_button_color"
...
                        android:layout_marginBottom="8dp"
                        android:visibility="@{areElementsVisible == true ? View.VISIBLE : View.GONE}"
                        app:cardElevation="4dp"
                        app:strokeWidth="0dp">

                        <RadioButton
                            android:id="@+id/radioButtonAnswer2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxWidth="@dimen/radio_button_max_width"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:buttonTint="@color/radio_button_color"
...
                        android:layout_marginBottom="8dp"
                        android:visibility="@{areElementsVisible == true ? View.VISIBLE : View.GONE}"
                        app:cardElevation="4dp"
                        app:strokeWidth="0dp">

                        <RadioButton
                            android:id="@+id/radioButtonAnswer3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxWidth="@dimen/radio_button_max_width"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:buttonTint="@color/radio_button_color"
...
                        android:layout_marginBottom="8dp"
                        android:visibility="@{areElementsVisible == true ? View.VISIBLE : View.GONE}"
                        app:cardElevation="4dp"
                        app:strokeWidth="0dp">

                        <RadioButton
                            android:id="@+id/radioButtonAnswer4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxWidth="@dimen/radio_button_max_width"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:buttonTint="@color/radio_button_color"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_cardView_radioButtons_quiz">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submitButton"
                        android:layout_width="144dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_submit_button"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:visibility="@{areElementsVisible == true ? View.VISIBLE : View.GONE}"
                        app:cornerRadius="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/nextButton"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/nextButton"
...
