<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_baseline_quiz_24dp"
        android:title="@string/str_title_quiz" />

    <item
        android:id="@+id/navigation_dictionary"
        android:icon="@drawable/ic_dictionary_black_24dp"
        android:title="@string/title_dictionary" />

    <item
        android:id="@+id/navigation_photo"
        android:icon="@drawable/ic_baseline_camera_24dp"
        android:title="@string/title_photo" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_profile_24dp"
        android:title="@string/title_profile" />

</menu>