<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_edit_profile"
        android:title="@string/str_edit_profile"
        android:contentDescription="@string/str_edit_profile"
        android:icon="@drawable/ic_baseline_edit_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_logout"
        android:title="@string/str_logout"
        app:showAsAction="never" />
</menu>